// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`exports-snapshot/starship-butler-utils starship-butler-utils/./config/runtime 1`] = `
"/**
 * Generated by tsnapi — public API snapshot of \`starship-butler-utils/config\`
 */
// #region Functions
export function loadConfig(_) {}
export function readUserConfig(_) {}
export function removeUserConfig(_) {}
export function updateUserConfig(_, _) {}
export function upsertUserConfig(_, _) {}
export function writeUserConfig(_, _) {}
// #endregion"
`;

exports[`exports-snapshot/starship-butler-utils starship-butler-utils/./config/dts 1`] = `
"/**
 * Generated by tsnapi — public API snapshot of \`starship-butler-utils/config\`
 */
// #region Types
export type ConfigLayerMeta = ConfigLayerMeta$1;
export type LoadConfigOptions<T extends UserInputConfig = UserInputConfig, MT extends ConfigLayerMeta = ConfigLayerMeta> = LoadConfigOptions$1<T, MT>;
export type RC = Record<string, any>;
export type RCOptions = typeof defaults;
// #endregion

// #region Functions
export declare function loadConfig<M extends UserInputConfig = UserInputConfig, MT extends ConfigLayerMeta = ConfigLayerMeta>(_?: LoadConfigOptions<M, MT>): Promise<ResolvedConfig<M, MT>>;
export declare function readUserConfig(_?: RCOptions): RC;
export declare function removeUserConfig(_?: RCOptions): void;
export declare function updateUserConfig(_: RC, _?: RCOptions): RC;
export declare function upsertUserConfig(_: RC, _?: RCOptions): RC | void;
export declare function writeUserConfig(_: RC, _?: RCOptions): void;
// #endregion"
`;

exports[`exports-snapshot/starship-butler-utils starship-butler-utils/./path/runtime 1`] = `
"/**
 * Generated by tsnapi — public API snapshot of \`starship-butler-utils/path\`
 */
// #region Functions
export function appdata(..._) {}
export function homedir(..._) {}
export function localAppdata(..._) {}
// #endregion"
`;

exports[`exports-snapshot/starship-butler-utils starship-butler-utils/./path/dts 1`] = `
"/**
 * Generated by tsnapi — public API snapshot of \`starship-butler-utils/path\`
 */
// #region Functions
export declare function appdata(..._: string[]): string;
export declare function homedir(..._: string[]): string;
export declare function localAppdata(..._: string[]): string;
// #endregion"
`;

exports[`exports-snapshot/starship-butler-utils starship-butler-utils/./fs/runtime 1`] = `
"/**
 * Generated by tsnapi — public API snapshot of \`starship-butler-utils/fs\`
 */
// #region Functions
export function copyFile(_, _, _) {}
export function createSymlink(_, _, _) {}
export function ensureDirectory(_) {}
export function exists(_) {}
export function isDirectory(_) {}
export function isSymbolicLink(_) {}
export function remove(_, _) {}
export function removeSymlink(_) {}
// #endregion"
`;

exports[`exports-snapshot/starship-butler-utils starship-butler-utils/./fs/dts 1`] = `
"/**
 * Generated by tsnapi — public API snapshot of \`starship-butler-utils/fs\`
 */
// #region Functions
export declare function copyFile(_: string, _: string, _?: boolean): boolean;
export declare function createSymlink(_: string, _: string, _?: boolean): boolean;
export declare function ensureDirectory(_: string): boolean;
export declare function exists(_: string): boolean;
export declare function isDirectory(_: string): boolean;
export declare function isSymbolicLink(_: string): boolean;
export declare function remove(_: string, _?: boolean): boolean;
export declare function removeSymlink(_: string): boolean;
// #endregion"
`;

exports[`exports-snapshot/starship-butler-utils starship-butler-utils/./highlight/runtime 1`] = `
"/**
 * Generated by tsnapi — public API snapshot of \`starship-butler-utils/highlight\`
 */
// #region Functions
export function important(_) {}
export function info(_) {}
export function success(_) {}
// #endregion"
`;

exports[`exports-snapshot/starship-butler-utils starship-butler-utils/./highlight/dts 1`] = `
"/**
 * Generated by tsnapi — public API snapshot of \`starship-butler-utils/highlight\`
 */
// #region Functions
export declare function important(_: string): string;
export declare function info(_: string): string;
export declare function success(_: string): string;
// #endregion"
`;

exports[`exports-snapshot/starship-butler-types starship-butler-types/./runtime 1`] = `
"/**
 * Generated by tsnapi — public API snapshot of \`starship-butler-types\`
 */
/* no exports */"
`;

exports[`exports-snapshot/starship-butler-types starship-butler-types/./dts 1`] = `
"/**
 * Generated by tsnapi — public API snapshot of \`starship-butler-types\`
 */
// #region Interfaces
export interface BasicOptions {
  verbose?: boolean;
  dryRun?: boolean;
}
// #endregion"
`;

exports[`exports-snapshot/starship-butler starship-butler/./runtime 1`] = `
"/**
 * Generated by tsnapi — public API snapshot of \`starship-butler\`
 */
// #region Functions
export function defineButlerConfig(_) {}
export async function loadConfig(_) {}
// #endregion"
`;

exports[`exports-snapshot/starship-butler starship-butler/./dts 1`] = `
"/**
 * Generated by tsnapi — public API snapshot of \`starship-butler\`
 */
// #region Interfaces
export interface ButlerConfig {
  "config-provider"?: ConfigProviderOptions;
}
// #endregion

// #region Types
export type SafeButlerConfig = Omit<ButlerConfig, "config-provider"> & {
  "config-provider"?: Omit<ConfigProviderOptions, "version">;
};
// #endregion

// #region Functions
export declare function defineButlerConfig(_: SafeButlerConfig): SafeButlerConfig;
export declare function loadConfig(_?: RCOptions & LoadConfigOptions<ButlerConfig>): Promise<ButlerConfig>;
// #endregion

// #region Re-exports
export * from "starship-butler-types";
// #endregion"
`;

exports[`exports-snapshot/starship-butler-config-provider starship-butler-config-provider/./runtime 1`] = `
"/**
 * Generated by tsnapi — public API snapshot of \`starship-butler-config-provider\`
 */
/* no exports */"
`;

exports[`exports-snapshot/starship-butler-config-provider starship-butler-config-provider/./dts 1`] = `
"/**
 * Generated by tsnapi — public API snapshot of \`starship-butler-config-provider\`
 */
// #region Interfaces
export interface ConfigProviderOptions {
  preset?: PresetOptions & {
    rime?: {
      ctrlSpaceDisabled?: boolean;
    };
  };
  set?: SetOptions;
  version?: string;
}
// #endregion"
`;

exports[`exports-snapshot/starship-butler-config-provider starship-butler-config-provider/./command/set/runtime 1`] = `
"/**
 * Generated by tsnapi — public API snapshot of \`starship-butler-config-provider/command/set\`
 */
// #region Functions
export async function commandSet(_, _, _) {}
export function validateOptions(_) {}
// #endregion"
`;

exports[`exports-snapshot/starship-butler-config-provider starship-butler-config-provider/./command/set/dts 1`] = `
"/**
 * Generated by tsnapi — public API snapshot of \`starship-butler-config-provider/command/set\`
 */
// #region Functions
export declare function commandSet(_: string, _: string, _: SetOptions): Promise<void>;
export declare function validateOptions(_: SetOptions): boolean;
// #endregion

// #region Other
export { SetOptions }
// #endregion"
`;

exports[`exports-snapshot/starship-butler-config-provider starship-butler-config-provider/./command/preset/runtime 1`] = `
"/**
 * Generated by tsnapi — public API snapshot of \`starship-butler-config-provider/command/preset\`
 */
// #region Classes
export class HandlerError extends Error {
  constructor(_) {}
}
// #endregion

// #region Functions
export async function commandPreset(_) {}
export async function filterActions(_) {}
export function validateOptions(_) {}
// #endregion"
`;

exports[`exports-snapshot/starship-butler-config-provider starship-butler-config-provider/./command/preset/dts 1`] = `
"/**
 * Generated by tsnapi — public API snapshot of \`starship-butler-config-provider/command/preset\`
 */
// #region Classes
export declare class HandlerError extends Error {
  constructor(_: string);
}
// #endregion

// #region Functions
export declare function commandPreset(_: PresetOptions): Promise<void>;
export declare function filterActions(_: PresetOptions): Promise<Action[]>;
export declare function validateOptions(_: PresetOptions): boolean;
// #endregion

// #region Other
export { Action }
export { ActionFactory }
export { ActionHandler }
export { ActionHandlerContext }
export { ConfigPathGenerator }
export { DestinationHandler }
export { PlatformDestinationMap }
export { PresetOptions }
// #endregion"
`;

exports[`exports-snapshot/starship-butler-config-provider starship-butler-config-provider/./command/utils/runtime 1`] = `
"/**
 * Generated by tsnapi — public API snapshot of \`starship-butler-config-provider/command/utils\`
 */
// #region Functions
export function readUserConfig(_) {}
export function upsertUserConfig(_, _) {}
// #endregion

// #region Other
export { copyPasteConfig }
export { processConfig }
export { symlinkConfig }
// #endregion"
`;

exports[`exports-snapshot/starship-butler-config-provider starship-butler-config-provider/./command/utils/dts 1`] = `
"/**
 * Generated by tsnapi — public API snapshot of \`starship-butler-config-provider/command/utils\`
 */
// #region Other
export { copyPasteConfig }
export { processConfig }
export { ProcessConfigOptions }
export { readUserConfig }
export { symlinkConfig }
export { upsertUserConfig }
// #endregion"
`;

exports[`exports-snapshot/starship-butler-config-provider starship-butler-config-provider/./constants/runtime 1`] = `
"/**
 * Generated by tsnapi — public API snapshot of \`starship-butler-config-provider/constants\`
 */
// #region Variables
export var ASSETS_FOLDER /* const */
export var PKG_ROOT /* const */
// #endregion"
`;

exports[`exports-snapshot/starship-butler-config-provider starship-butler-config-provider/./constants/dts 1`] = `
"/**
 * Generated by tsnapi — public API snapshot of \`starship-butler-config-provider/constants\`
 */
// #region Variables
export declare const ASSETS_FOLDER: string;
export declare const PKG_ROOT: string;
// #endregion"
`;
